--- a/html/exam1/contact.html
+++ b/html/exam1/contact.html
@@ -5,47 +5,100 @@
     <link rel="stylesheet" href="https://use.typekit.net/dbb3wnj.css">
     <link rel="stylesheet" type="text/css" href="/css/exam1.css">
     <meta charset="utf-8">
-    <meta name="description" content="METADESCRIPTION">
-    <meta name="keywords" content="METACONTENT">
+    <meta name="description" content="Want to learn more about space, or have any other question? Contact us today!">
     <meta name="author" content="MJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WRITE TITLE HERE</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
-    <header>
-        <figure class="menuBox">
-            <img src="/images/exam1/menu.png" class="menuPng">
-        </figure>
+    <!-- Header -->
+    <header class="header" id="top">
+        <sesction class="dropDown">
+            <nav onclick="dropFunction()" role="navigation" aria-label="Open dropdown menu" class="dropButton">
+            </nav>
+            <nav id="myDropdown" class="dropDownContent">
+                <a href="index.html">Home</a>
+                <a href="launches.html">Upcoming Launches</a>
+                <a href="shuttles.html">Space Shuttles</a>
+                <a href="about.html">About</a>
+                <a href="contact.html" aria-current="page">Contact</a>
+            </nav>
+            <nav class="menu-items">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="launches.html">Upcoming Launches</a></li>
+                    <li><a href="shuttles.html">Space Shuttles</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html" aria-current="page">Contact</a></li>
+                </ul>
+            </nav>
+        </section> 
     </header>
 
-    <div class="pageId"><p><a href="index.html">Home</a> &lt;</p></div>
+    <nav title="Breadcrumbs navigation" class="breadcrumb"><p><a href="index.html">Home</a> ▸ Contact</p></nav>
 
+    <!-- Body -->
 
-    <!-- FLEX 2 -->
+    <section class="banner contact-header-img">
+        <header class="contact-banner ">
+            <h1>Contact Us</h1>
+            <p>You are welcome to contact us if you have any question.</p>
+            <p>Use the form below to write us an email, 
+                and we will get back to you as soon as possible.</p>
+            <p>Thank you!</p>
+        </header>
+    </section>
 
-    <!-- FLEX 3 -->
-    <div class="to-top">
-
-    </div>
-    <!-- FLEX 4 -->
-    <footer>
-        <div class="footerContainer">
-            <div class="footerTxt footerBox">
-                <h3 class="footerH3"><a href="/#">Terms</a></h3>
-                <h3 class="footerH3"><a href="contact.html">Contact</a></h3>
-                <h3 class="footerH3"><a href="explorespace.html">Explore</a></h3>
+    <form class="contact-form">
+        <fieldset>
+            <legend>Please fill in the form:</legend>
+            <div class="form-group" title="input container">
+                <input for="firstName" name="firstName" id="firstName" placeholder="First name (required)">
+                <p class="form-error" id="firstNameError">Please enter your first name</p>
             </div>
-            <figure class="footerPng footerBox">
-                <a href="/#"><img src="/images/exam1/twitter@2x.png" alt="Twitter icon" class="socialPng"></a>
-                <a href="/#"><img src="/images/exam1/facebook@2x.png" alt="Facebook icon" class="socialPng"></a>
-                <a href="/#"><img src="/images/exam1/Instagram@2x.png" alt="Instagram icon" class="socialPng"></a>
-            </figure>
-        </div>
+
+            <div class="form-group" title="input container">
+                <input for="lastName" name="lastName" id="lastName" placeholder="Last name (required)" />
+                <p class="form-error" id="lastNameError">Please enter your last name</p>
+            </div>
+
+            <div class="form-group" title="input container">
+                <input for="email" name="email" id="email" placeholder="Email (required)" />
+                <p class="form-error" id="emailError">Please enter your email</p>
+            </div>
+
+            <div class="form-group" title="input container">
+                <textarea name="message" id="message" placeholder="Write your message here"></textarea>
+                <p class="form-error" id="messageError">Please write your message</p>
+            </div>
+
+            <div class="button-div" title="Submit button">
+                <button type="submit" class="button" id="submit">Submit</button>
+            </div>
+        </fieldset>
+    </form>
+
+    <nav class="to-top" title="navigate back to the top of the page">
+        <a href="#top" ><img src="../../images/exam1/back-2-top.png" alt="back to top icon"></a>
+    </nav>
+    
+    <!-- Footer -->
+    <footer>
+        <nav class="footer-txt">
+            <h3 class="footerH3"><a href="/#">Terms</a></h3>
+            <h3 class="footerH3"><a href="contact.html">Contact</a></h3>
+            <h3 class="footerH3"><a href="about.html">About</a></h3>
+        </nav>
+        <figure class="footer-element">
+            <a href="/#"><img src="/images/exam1/twitter@2x.png" alt="Twitter icon" class="socialPng"></a>
+            <a href="/#"><img src="/images/exam1/facebook@2x.png" alt="Facebook icon" class="socialPng"></a>
+            <a href="/#"><img src="/images/exam1/Instagram@2x.png" alt="Instagram icon" class="socialPng"></a>
+        </figure>
     </footer>
 
-    <script src="/js/components/errorMessage.js"></script>
-    <script src="/exam1.js"></script>
+    <script src="/js/components/dropbutton.js"></script>
+    <script src="../../js/exam/contact.js"></script>
 </body>
 
 </html>
